clementine/TODO
Lots of implicit cast errors and a thread initializer issue in a
header in the NetBSD base system:

In file included from /usr/include/sys/types.h:354:0,
                 from /scratch/wip/clementine/work/.buildlink/include/cdio/types.h:35,
                 from /scratch/wip/clementine/work/.buildlink/include/cdio/cdio.h:36,
                 from /scratch/wip/clementine/work/Clementine-1.3.1/src/ripper/ripper.h:21,
                 from /scratch/wip/clementine/work/Clementine-1.3.1/src/ripper/ripper.cpp:18:
/usr/include/g++/ext/concurrence.h: At global scope:
/usr/include/g++/ext/concurrence.h:122:34: error: invalid conversion from 'void*' to 'pthread_t {aka __pthread_st*}' [-fpermissive]
     __gthread_mutex_t _M_mutex = __GTHREAD_MUTEX_INIT;
                                  ^
/usr/include/g++/ext/concurrence.h:122:34: error: invalid conversion from 'void*' to '__pthread_st**' [-fpermissive]
/usr/include/g++/ext/concurrence.h:255:32: error: invalid conversion from 'void*' to '__pthread_st*' [-fpermissive]
     __gthread_cond_t _M_cond = __GTHREAD_COND_INIT;
                                ^
/usr/include/g++/ext/concurrence.h:255:32: error: invalid conversion from 'void*' to '__pthread_st**' [-fpermissive]
/usr/include/g++/ext/concurrence.h:255:32: error: invalid conversion from 'void*' to 'pthread_mutex_t* {aka __pthread_mutex_st*}' [-fpermissive]
